--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "restructuredtext.confPath": "${workspaceFolder}\\docs",
     "files.associations": {
         "usart_driver.h": "c"
-    }
+    },
+    "python.analysis.extraPaths": [
+        "./software/chipwhisperer"
+    ]
 }
