Changed remote path to jupyter folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "hardware/victims/firmware/crypto/secAES-ATmega8515"]
 	path = hardware/victims/firmware/crypto/secAES-ATmega8515
 	url = https://github.com/jmichelp/secAES-ATmega8515.git
-[submodule "chipwhisperer-jupyter"]
+[submodule "SCA_test_jupyter"]
 	path = jupyter
-	url = https://github.com/newaetech/chipwhisperer-jupyter.git
+	url = https://github.com/mattiamirigaldi/SCA_test_jupyter/
 [submodule "hardware/victims/firmware/crypto/SecAESSTM32"]
 	path = hardware/victims/firmware/crypto/SecAESSTM32
 	url = https://github.com/ANSSI-FR/SecAESSTM32/
